content/docs/0.8.x/reference/cli/commands/keptn_get.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn get"
slug: keptn_get
---
## keptn get

Displays an event or Keptn entities such as project, stage, or service

### Synopsis

Displays an event or Keptn entities such as project, stage, or service.

### Options

```
  -h, --help   help for get
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn get event](../keptn_get_event/)	 - Returns the latest Keptn event specified by event type
* [keptn get project](../keptn_get_project/)	 - Get details of a Keptn project
* [keptn get service](../keptn_get_service/)	 - Get service details
* [keptn get stage](../keptn_get_stage/)	 - Get details of a stage

###### Auto generated by spf13/cobra on 19-Nov-2020
