content/docs/0.11.x/reference/cli/commands/keptn_get.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn get"
slug: keptn_get
---
## keptn get

Displays an event or Keptn entities such as project, stage, or service

### Synopsis

Displays an event or Keptn entities such as project, stage, or service.

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn get event](../keptn_get_event/)	 - Returns the latest Keptn event specified by event type
* [keptn get project](../keptn_get_project/)	 - Get details of a Keptn project
* [keptn get secret](../keptn_get_secret/)	 - Gets the list of secrets managed by the Keptn secret-service
* [keptn get service](../keptn_get_service/)	 - Get service details
* [keptn get stage](../keptn_get_stage/)	 - Get details of a stage

###### Auto generated by spf13/cobra on 25-Nov-2021
